# mcp-pokemon-server

./: .bandit  .dockerignore  .env.example  .gitignore  .pre-commit-config-basic.yaml  .pre-commit-config.yaml  CLAUDE.md  DOCKER_CONNECTION_GUIDE.md  Dockerfile  Dockerfile.dev  EJEMPLOS_MCP_POKEMON.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  investigation.md  plan-de-accion-mcp.md  pokemon-server-capabilities.md  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: basic-checks.yml  ci.yml
config/: mcp_client_config.json  mcp_server_manifest.json
docker/: README.md
docs/: INTERACTIVE_EXAMPLES.md  PROMPT_USAGE_GUIDE.md
mcp-pokemon-server/: .env.example  HOW_TO_RUN.md  PROJECT_STATUS.md  README.md  SETUP_CLAUDE.md  SETUP_VSCODE.md  demo_prompts.py  mcp_config.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py  start_server.sh  test_integration.py  test_manual.py  test_prompt_content.py  test_prompts.py  test_server.py  test_server_connection.py  test_stdio_connection.py
mcp-pokemon-server/.github/workflows/: basic-checks.yml
mcp-pokemon-server/config/: mcp_server_manifest.json
mcp-pokemon-server/src/: __init__.py  main.py
mcp-pokemon-server/src/clients/: pokeapi_client.py
mcp-pokemon-server/src/config/: __init__.py  logging.py  settings.py
mcp-pokemon-server/src/models/: __init__.py  pokemon_models.py  response_models.py
mcp-pokemon-server/src/prompts/: __init__.py  battle_prompts.py  educational_prompts.py
mcp-pokemon-server/src/resources/: __init__.py  pokemon_resources.py
mcp-pokemon-server/src/server/: __init__.py  mcp_server.py
mcp-pokemon-server/src/tools/: pokemon_tools.py
mcp-pokemon-server/src/utils/: __init__.py
mcp-pokemon-server/tests/: conftest.py  test_client.py  test_tools.py
src/: main.py
src/cache/: __init__.py  decorators.py  redis_cache.py
src/clients/: __init__.py  pokeapi_client.py
src/config/: logging.py  settings.py
src/models/: pokemon_models.py  response_models.py
src/prompts/: battle_prompts.py  educational_prompts.py
src/resources/: pokemon_resources.py
src/server/: mcp_server.py
src/tools/: __init__.py  interactive_tools.py  pokemon_tools.py
tests/: __init__.py  conftest.py  test_cache.py  test_interactive_tools.py  test_tools.py
